isotope/app-policies/bookinfo/bookinfo.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
  namespace: service-graph
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
  namespace: service-graph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: docker.io/istio/examples-bookinfo-details-v1:1.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
      nodeSelector:
        cloud.google.com/gke-nodepool: service-graph-pool
---
##################################################################################################
# Ratings service
##################################################################################################
# apiVersion: v1
# kind: Service
# metadata:
#   name: ratings
#   labels:
#     app: ratings
#     service: ratings
#   namespace: service-graph
# spec:
#   ports:
#   - port: 9080
#     name: http
#   selector:
#     app: ratings
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: bookinfo-ratings
#   namespace: service-graph
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: ratings-v1
#   labels:
#     app: ratings
#     version: v1
#   namespace: service-graph
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: ratings
#       version: v1
#   template:
#     metadata:
#       labels:
#         app: ratings
#         version: v1
#     spec:
#       serviceAccountName: bookinfo-ratings
#       containers:
#       - name: ratings
#         image: docker.io/istio/examples-bookinfo-ratings-v1:1.15.0
#         imagePullPolicy: IfNotPresent
#         ports:
#         - containerPort: 9080
#       nodeSelector:
#         cloud.google.com/gke-nodepool: service-graph-pool
# ---
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
  namespace: service-graph
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  labels:
    app: reviews
    version: v1
  namespace: service-graph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
      nodeSelector:
        cloud.google.com/gke-nodepool: service-graph-pool
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v2
#   labels:
#     app: reviews
#     version: v2
#   namespace: service-graph
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v2
#   template:
#     metadata:
#       labels:
#         app: reviews
#         version: v2
#     spec:
#       serviceAccountName: bookinfo-reviews
#       containers:
#       - name: reviews
#         image: docker.io/istio/examples-bookinfo-reviews-v2:1.15.0
#         imagePullPolicy: IfNotPresent
#         ports:
#         - containerPort: 9080
#       nodeSelector:
#         cloud.google.com/gke-nodepool: service-graph-pool
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v3
#   labels:
#     app: reviews
#     version: v3
#   namespace: service-graph
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v3
#   template:
#     metadata:
#       labels:
#         app: reviews
#         version: v3
#     spec:
#       serviceAccountName: bookinfo-reviews
#       containers:
#       - name: reviews
#         image: docker.io/istio/examples-bookinfo-reviews-v3:1.15.0
#         imagePullPolicy: IfNotPresent
#         ports:
#         - containerPort: 9080
#       nodeSelector:
#         cloud.google.com/gke-nodepool: service-graph-pool
---
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
    service: productpage
  namespace: service-graph
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  labels:
    app: productpage
    version: v1
  namespace: service-graph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: docker.io/istio/examples-bookinfo-productpage-v1:1.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
      nodeSelector:
        cloud.google.com/gke-nodepool: service-graph-pool
