isotope/app-policies/bookinfo/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
  namespace: service-graph
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: service-graph
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: v2
  #   labels:
  #     version: v2
  # - name: v3
  #   labels:
  #     version: v3
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: ratings
#   namespace: service-graph
# spec:
#   host: ratings
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
#   - name: v2-mysql
#     labels:
#       version: v2-mysql
#   - name: v2-mysql-vm
#     labels:
#       version: v2-mysql-vm
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: service-graph
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
